crates/cypher-ast/tests/snapshots/snapshot__clause_match_multiple_patterns.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 203
expression: "dump(\"MATCH (a), (b), (c) RETURN a, b, c\")"
---
SourceFile(SOURCE_FILE@0..34)
  STATEMENT@0..34
    MatchClause(MATCH_CLAUSE@0..19)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "a"
            R_PAREN@8..9 ")"
      COMMA@9..10 ","
      Pattern(PATTERN@10..14)
        PATTERN_PART@10..14
          NodePattern(NODE_PATTERN@10..14)
            WHITESPACE@10..11 " "
            L_PAREN@11..12 "("
            NAME@12..13
              IDENT@12..13 "b"
            R_PAREN@13..14 ")"
      COMMA@14..15 ","
      Pattern(PATTERN@15..19)
        PATTERN_PART@15..19
          NodePattern(NODE_PATTERN@15..19)
            WHITESPACE@15..16 " "
            L_PAREN@16..17 "("
            NAME@17..18
              IDENT@17..18 "c"
            R_PAREN@18..19 ")"
    ReturnClause(RETURN_CLAUSE@19..34)
      WHITESPACE@19..20 " "
      RETURN_KW@20..26 "RETURN"
      RETURN_BODY@26..34
        RETURN_ITEMS@26..34
          ReturnItem(RETURN_ITEM@26..28)
            VAR_EXPR@26..28
              WHITESPACE@26..27 " "
              IDENT@27..28 "a"
          COMMA@28..29 ","
          ReturnItem(RETURN_ITEM@29..31)
            VAR_EXPR@29..31
              WHITESPACE@29..30 " "
              IDENT@30..31 "b"
          COMMA@31..32 ","
          ReturnItem(RETURN_ITEM@32..34)
            VAR_EXPR@32..34
              WHITESPACE@32..33 " "
              IDENT@33..34 "c"
