crates/cypher-ast/tests/snapshots/snapshot__clause_with_projection.snap
---
source: crates/cypher-ast/tests/snapshot.rs
expression: "dump(\"MATCH (n) WITH n RETURN n\")"
---
SourceFile(SOURCE_FILE@0..25)
  STATEMENT@0..25
    MatchClause(MATCH_CLAUSE@0..9)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    WithClause(WITH_CLAUSE@9..16)
      WHITESPACE@9..10 " "
      WITH_KW@10..14 "WITH"
      RETURN_BODY@14..16
        RETURN_ITEMS@14..16
          ReturnItem(RETURN_ITEM@14..16)
            VAR_EXPR@14..16
              WHITESPACE@14..15 " "
              IDENT@15..16 "n"
    ReturnClause(RETURN_CLAUSE@16..25)
      WHITESPACE@16..17 " "
      RETURN_KW@17..23 "RETURN"
      RETURN_BODY@23..25
        RETURN_ITEMS@23..25
          ReturnItem(RETURN_ITEM@23..25)
            VAR_EXPR@23..25
              WHITESPACE@23..24 " "
              IDENT@24..25 "n"
